# evm

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/evm/: CMakeLists.txt  advanced_analysis.cpp  advanced_analysis.hpp  advanced_execution.cpp  advanced_execution.hpp  advanced_instructions.cpp  baseline.hpp  baseline_analysis.cpp  baseline_execution.cpp  baseline_instruction_table.cpp  baseline_instruction_table.hpp  constants.hpp  delegation.cpp  delegation.hpp  execution_state.hpp  instructions.hpp  instructions_calls.cpp  instructions_opcodes.hpp  instructions_storage.cpp  instructions_traits.hpp  lru_cache.hpp  tracing.cpp  tracing.hpp  vm.cpp  vm.hpp
lib/evm/gpu/: bench_block.cpp  bench_parallel.cpp  go_bridge.cpp  go_bridge.h  gpu_dispatch.cpp  gpu_dispatch.hpp  gpu_state_hasher.hpp  parallel_engine.cpp  parallel_engine.hpp  parallel_host.hpp  persistent_pool.hpp  persistent_pool.mm  pipeline.hpp  scheduler.cpp  scheduler.hpp  test_modes.cpp  test_pipeline.cpp  test_unified.cpp
lib/evm/gpu/kernel/: bench_kernel.cpp  evm_interpreter.hpp  evm_kernel.metal  evm_kernel_host.hpp  evm_kernel_host.mm  evm_stack.hpp  uint256_gpu.hpp
lib/evm/gpu/metal/: bench_keccak.cpp  block_stm.metal  block_stm_host.hpp  block_stm_host.mm  bls_host.hpp  bls_host.mm  keccak256.metal  keccak_host.hpp  keccak_host.mm  state_table.metal  tx_validate.metal  tx_validate_host.hpp  tx_validate_host.mm
lib/evm/state/: account.hpp  bench_state.cpp  evmc_host.hpp  gpu_hashtable.hpp  gpu_hashtable.mm  gpu_state.hpp  gpu_state_db.hpp  processor.cpp  processor.hpp  state_db.cpp  state_db.hpp  storage.hpp  test_gpu_state.cpp
lib/evmone/gpu/: mv_memory.cpp  mv_memory.hpp
